# dmark

./: .gitignore  LICENSE  README.md  RELEASE.md  dmark.sln  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: IMPROVEMENT_BACKLOG.md
src/dmark/: __init__.py  action_plan.py  analyzer.py  classification.py  cli.py  dns.py  models.py  parser.py  pst_extract.py  reporting.py  scoring.py  summary_payload.py  time_series.py  webapp.py
src/dmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dmark/dotnet/pstparse_extractor/: Program.cs
src/dmark/static/: app.js  style.css
src/dmark/templates/: index.html
tests/: test_cli_integration.py  test_dmark.py  test_domain_summary_contract.py  test_domain_summary_golden.py  test_reporting_integration.py  test_webapp.py
tests/fixtures/domain_summary/: single_report_baseline.json  two_report_with_sender_context.json
tools/pstparse_extractor/: pstparse_extractor.csproj
